--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
 .App {
   text-align: center;
+  background-color: #082131;
+  min-height: 100vh;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  overflow: hidden; /* Prevent overflow */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sankey-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #082131; /* Dark blue background */
+  overflow: auto; /* Allow scrolling if content overflows */
 }
 
 @media (prefers-reduced-motion: no-preference) {
